Fix spacing and formatting in card links and adjust object-fit property

--- a/style/style.css
+++ b/style/style.css
@@ -90,7 +90,7 @@ main{
   margin-left: auto;
   margin-right: auto;
   margin-bottom: var(--spacing-24);
-  object-fit:cover;
+  object-fit: cover;
 }
 
 .card__name {
@@ -128,13 +128,20 @@ main{
   list-style: none;
   padding: 0;
 }
+.card__links-list li {
+  margin-bottom: var(--spacing-16);
+}
+
+.card__links-list li:last-child {
+    margin-bottom: 0; 
+}
+
 
 .card__link {
   display: block;
   background-color: var(--color-btn-primary);
   color: var(--color-text-primary);
   padding: var(--spacing-12);
-  margin-bottom: var(--spacing-16);
   border-radius: 0.8rem;
   font-size: var(--font-size-14);
   text-align: center;
